--- a/tex/selection_tables.tex
+++ b/tex/selection_tables.tex
@@ -5,13 +5,22 @@
     Channel & \multicolumn{3}{c}{$\mu$ + jets pretag} & \multicolumn{3}{c}{$\mu$ + jets tag} & \multicolumn{3}{c}{$e$ + jets pretag} & \multicolumn{3}{c}{$e$ + jets tag} \\ 
     \midrule
     \ttbar{}         & 34900 &$\!\!\!\pm\!\!\!$& 2200  & 30100 &$\!\!\!\pm\!\!\!$& 1900  & 21400 &$\!\!\!\pm\!\!\!$& 1300  & 18500 &$\!\!\!\pm\!\!\!$& 1100  \\ %NEW tt x-sec
-    \wjets{}         & 28200 &$\!\!\!\pm\!\!\!$& 3100  & 4800  &$\!\!\!\pm\!\!\!$& 900   & 13200 &$\!\!\!\pm\!\!\!$& 1600  & 2300  &$\!\!\!\pm\!\!\!$& 900  \\
-    Multi--jets      & 5500  &$\!\!\!\pm\!\!\!$& 1100  & 1800  &$\!\!\!\pm\!\!\!$& 400   & 3800  &$\!\!\!\pm\!\!\!$& 1900  & 800   &$\!\!\!\pm\!\!\!$& 400  \\ 
     Single top       & 2460  &$\!\!\!\pm\!\!\!$& 120   & 1970  &$\!\!\!\pm\!\!\!$& 100   & 1530  &$\!\!\!\pm\!\!\!$& 80    & 1220  &$\!\!\!\pm\!\!\!$& 60   \\ 
+    \wjets{}         & 28200 &$\!\!\!\pm\!\!\!$& 3100  & 4800  &$\!\!\!\pm\!\!\!$& 900   & 13200 &$\!\!\!\pm\!\!\!$& 1600  & 2300  &$\!\!\!\pm\!\!\!$& 900  \\
     \zjets{}         & 3000  &$\!\!\!\pm\!\!\!$& 1900  & 480   &$\!\!\!\pm\!\!\!$& 230   & 3000  &$\!\!\!\pm\!\!\!$& 1400  & 460   &$\!\!\!\pm\!\!\!$& 220   \\
     Diboson          & 380   &$\!\!\!\pm\!\!\!$& 180   & 80    &$\!\!\!\pm\!\!\!$& 40    & 230   &$\!\!\!\pm\!\!\!$& 110   & 47    &$\!\!\!\pm\!\!\!$& 22   \\ 
-    Total background & 40000 &$\!\!\!\pm\!\!\!$& 4000  & 9200  &$\!\!\!\pm\!\!\!$& 1000  & 21700 &$\!\!\!\pm\!\!\!$& 2900  & 4800  &$\!\!\!\pm\!\!\!$& 1000  \\ 
-    Signal + background     & 74000 &$\!\!\!\pm\!\!\!$ & 4000 & 39300 &$\!\!\!\pm\!\!\!$& 2100  & 43100 &$\!\!\!\pm\!\!\!$& 3100 & 23300 &$\!\!\!\pm\!\!\!$& 1600  \\ \hline
+    Multijet      & 5500  &$\!\!\!\pm\!\!\!$& 1100  & 1800
+    &$\!\!\!\pm\!\!\!$& 400   & 3800  &$\!\!\!\pm\!\!\!$& 1900  & 800
+    &$\!\!\!\pm\!\!\!$& 400  \\ 
+    \midrule
+    Total background & 40000 &$\!\!\!\pm\!\!\!$& 4000  & 9200
+    &$\!\!\!\pm\!\!\!$& 1000  & 21700 &$\!\!\!\pm\!\!\!$& 2900  & 4800
+    &$\!\!\!\pm\!\!\!$& 1000  \\ 
+    \midrule
+    Total expected     & 74000 &$\!\!\!\pm\!\!\!$ & 4000 & 39300
+    &$\!\!\!\pm\!\!\!$& 2100  & 43100 &$\!\!\!\pm\!\!\!$& 3100 & 23300
+    &$\!\!\!\pm\!\!\!$& 1600  \\
+    \midrule
     Observed                & \multicolumn{3}{c}{70845}  & \multicolumn{3}{c}{37568} & \multicolumn{3}{c}{40972}      & \multicolumn{3}{c}{21929} \\
     \bottomrule
   \end{tabular}
@@ -29,25 +38,27 @@
     \toprule
     Channel & \multicolumn{3}{c}{\mujets{} pretag} & \multicolumn{3}{c}{\mujets{} 0-tag} & \multicolumn{3}{c}{\mujets{} 1-tag} & \multicolumn{3}{c}{\mujets{} 2-tag} \\
     \midrule      
-    $t\bar{t}$       & 197000 &$\!\!\!\pm\!\!\!$& 400  & 28480 &$\!\!\!\pm\!\!\!$& 170  & 88230 &$\!\!\!\pm\!\!\!$& 300  & 93810 &$\!\!\!\pm\!\!\!$& 310  \\
-    Single top       & 16100  &$\!\!\!\pm\!\!\!$& 130  & 3260  &$\!\!\!\pm\!\!\!$& 60  & 8070  &$\!\!\!\pm\!\!\!$& 90  & 5560  &$\!\!\!\pm\!\!\!$& 70   \\ 
-    $W$+jets  & 171700 &$\!\!\!\pm\!\!\!$& 400 & 147800  &$\!\!\!\pm\!\!\!$& 400  & 21150 &$\!\!\!\pm\!\!\!$& 150  & 3310 &$\!\!\!\pm\!\!\!$& 60  \\
-    $Z$+jets         & 17820  &$\!\!\!\pm\!\!\!$& 130  & 15270   &$\!\!\!\pm\!\!\!$& 120  & 2160  &$\!\!\!\pm\!\!\!$& 50  & 623   &$\!\!\!\pm\!\!\!$& 25   \\
-    Diboson          & 6140   &$\!\!\!\pm\!\!\!$& 80   & 5220  &$\!\!\!\pm\!\!\!$& 70 & 855 &$\!\!\!\pm\!\!\!$& 29 & 90  &$\!\!\!\pm\!\!\!$& 10 \\ 
-    QCD       & 15600  &$\!\!\!\pm\!\!\!$& 120  & 9030  &$\!\!\!\pm\!\!\!$& 100  & 4930  &$\!\!\!\pm\!\!\!$& 70  & 2590   &$\!\!\!\pm\!\!\!$& 50  \\ 
-    \midrule
-    Total background & 227400 &$\!\!\!\pm\!\!\!$& 500 & 180500  &$\!\!\!\pm\!\!\!$& 400  & 37170 &$\!\!\!\pm\!\!\!$& 200 & 12170  &$\!\!\!\pm\!\!\!$& 110  \\ 
-    \midrule
-    Total expected   & 424400 &$\!\!\!\pm\!\!\!$& 600 & 209000 &$\!\!\!\pm\!\!\!$& 500  & 125390 &$\!\!\!\pm\!\!\!$& 350 & 105980 &$\!\!\!\pm\!\!\!$& 330  \\ 
-    \midrule
-    Observed         & \multicolumn{3}{c}{427138}     & \multicolumn{3}{c}{207057}     & \multicolumn{3}{c}{126105}     & \multicolumn{3}{c}{111248}     \\ 
+    $t\bar{t}$                  & 203000 &$\!\!\!\pm\!\!\!$& 3000   & 21100 &$\!\!\!\pm\!\!\!$& 800   & 86100 &$\!\!\!\pm\!\!\!$& 1700 & 96100 &$\!\!\!\pm\!\!\!$& 900  \\
+    Single top                  & 13300  &$\!\!\!\pm\!\!\!$& 1300   & 1950 &$\!\!\!\pm\!\!\!$& 220    & 6700 &$\!\!\!\pm\!\!\!$& 700   & 4600 &$\!\!\!\pm\!\!\!$& 400   \\
+    \wbb{}                      & 48000  &$\!\!\!\pm\!\!\!$& 4000   & 28500 &$\!\!\!\pm\!\!\!$& 2800  & 15200 &$\!\!\!\pm\!\!\!$& 1400 & 4000 &$\!\!\!\pm\!\!\!$& 400   \\
+    \wc{}                       & 19000  &$\!\!\!\pm\!\!\!$& 5000   & 13200 &$\!\!\!\pm\!\!\!$& 3600  & 5100 &$\!\!\!\pm\!\!\!$& 1400  & 320 &$\!\!\!\pm\!\!\!$& 90\\
+    \wlight{}                   & 62400  &$\!\!\!\pm\!\!\!$& 3300   & 58600 &$\!\!\!\pm\!\!\!$& 3100  & 3580 &$\!\!\!\pm\!\!\!$& 200   & 197 &$\!\!\!\pm\!\!\!$& 11  \\   
+    \zjets{}                    & 10000  &$\!\!\!\pm\!\!\!$& 4000   & 7000 &$\!\!\!\pm\!\!\!$& 3300   & 1900 &$\!\!\!\pm\!\!\!$& 1000  & 800 &$\!\!\!\pm\!\!\!$& 400\\
+    Diboson                     & 5900   &$\!\!\!\pm\!\!\!$& 2700   & 4600 &$\!\!\!\pm\!\!\!$& 2100   & 1100 &$\!\!\!\pm\!\!\!$& 500   & 210 &$\!\!\!\pm\!\!\!$& 90   \\  
+    Multijet                    & 7500   &$\!\!\!\pm\!\!\!$& 2300   & 3600 &$\!\!\!\pm\!\!\!$& 1600   & 2500 &$\!\!\!\pm\!\!\!$& 1400  & 1400 &$\!\!\!\pm\!\!\!$& 600   \\
+    \midrule                                                                                                                                                            
+    Total background            & 165000 &$\!\!\!\pm\!\!\!$& 3000   & 117400 &$\!\!\!\pm\!\!\!$& 900  & 36100 &$\!\!\!\pm\!\!\!$& 1700 & 11500 &$\!\!\!\pm\!\!\!$& 800\\
+    \midrule                                                                                                                                                            
+    Total expected              & 368300 &$\!\!\!\pm\!\!\!$& 700    & 138500 &$\!\!\!\pm\!\!\!$& 400  & 122200 &$\!\!\!\pm\!\!\!$& 400 & 107600 &$\!\!\!\pm\!\!\!$& 330 \\
+    \midrule                                                                                                                                                            
+    Observed                    & \multicolumn{3}{c}{368324}        & \multicolumn{3}{c}{138490}      & \multicolumn{3}{c}{122230}     & \multicolumn{3}{c}{107604}     \\
     \bottomrule
   \end{tabular}
   \caption[Event yields for the \mujets{} samples at $\sqrt{s} = 8 \TeV{}$]{
     Numbers of expected events for the \ttbar{} signal and the various background 
     processes and observed events in data for the \mujets{} dataset
     at $\sqrt{s} = 8 \TeV{}$.
-    The uncertainties include statistical and systematic components.}
+    The calibrated yields and uncertainties are shown.}
   \label{tab:yields2012mu}
 \end{table}
 
@@ -56,24 +67,26 @@
     \toprule
     Channel & \multicolumn{3}{c}{\ejets{} pretag} & \multicolumn{3}{c}{\ejets{} 0-tag} & \multicolumn{3}{c}{\ejets{} 1-tag} & \multicolumn{3}{c}{\ejets{} 2-tag} \\
     \midrule
-    $t\bar{t}$       & 159800 &$\!\!\!\pm\!\!\!$& 400  & 23040 &$\!\!\!\pm\!\!\!$& 150  & 71440 &$\!\!\!\pm\!\!\!$& 270  & 77120 &$\!\!\!\pm\!\!\!$& 280  \\
-    Single top       & 13190  &$\!\!\!\pm\!\!\!$& 110  & 2670  &$\!\!\!\pm\!\!\!$& 50  & 6590  &$\!\!\!\pm\!\!\!$& 80  & 4660  &$\!\!\!\pm\!\!\!$& 70   \\
-    $W$+jets  & 126900 &$\!\!\!\pm\!\!\!$& 400 & 109150  &$\!\!\!\pm\!\!\!$& 330  & 15720 &$\!\!\!\pm\!\!\!$& 130  & 2450  &$\!\!\!\pm\!\!\!$& 50  \\
-    $Z$+jets         & 32710  &$\!\!\!\pm\!\!\!$& 180  & 28400   &$\!\!\!\pm\!\!\!$& 170   & 3690  &$\!\!\!\pm\!\!\!$& 60  & 1178   &$\!\!\!\pm\!\!\!$& 34   \\
-    Diboson          & 5420  &$\!\!\!\pm\!\!\!$& 70   & 4590  &$\!\!\!\pm\!\!\!$& 70 & 765 &$\!\!\!\pm\!\!\!$& 28 & 100  &$\!\!\!\pm\!\!\!$& 10 \\
-    QCD       & 24970  &$\!\!\!\pm\!\!\!$& 160  & 18540  &$\!\!\!\pm\!\!\!$& 140  & 6020  &$\!\!\!\pm\!\!\!$& 80  & 1560   &$\!\!\!\pm\!\!\!$& 40  \\
-    \midrule
-    Total background & 203200 &$\!\!\!\pm\!\!\!$& 500 & 163300  &$\!\!\!\pm\!\!\!$& 400  & 32780 &$\!\!\!\pm\!\!\!$& 180 & 9950  &$\!\!\!\pm\!\!\!$& 100  \\
-    \midrule
-    Total expected   & 362900 &$\!\!\!\pm\!\!\!$& 600 & 186400 &$\!\!\!\pm\!\!\!$& 400  & 104220 &$\!\!\!\pm\!\!\!$& 330 & 87070 &$\!\!\!\pm\!\!\!$& 300  \\
-    \midrule
-    Observed         & \multicolumn{3}{c}{354865}     & \multicolumn{3}{c}{181295}     & \multicolumn{3}{c}{99236}     & \multicolumn{3}{c}{89462}     \\
+    $t\bar{t}$            & 153100 &$\!\!\!\pm\!\!\!$& 2700   & 13900 &$\!\!\!\pm\!\!\!$& 700   & 63000 &$\!\!\!\pm\!\!\!$& 1600   & 76200 &$\!\!\!\pm\!\!\!$& 800  \\ 
+    Single top            & 11300  &$\!\!\!\pm\!\!\!$& 1200   & 1540 &$\!\!\!\pm\!\!\!$& 200    & 5600 &$\!\!\!\pm\!\!\!$& 600     & 4200 &$\!\!\!\pm\!\!\!$& 400  \\
+    \wbb{}                & 36000  &$\!\!\!\pm\!\!\!$& 5000   & 21200 &$\!\!\!\pm\!\!\!$& 2700  & 12000 &$\!\!\!\pm\!\!\!$& 1500   & 3200 &$\!\!\!\pm\!\!\!$& 400  \\
+    \wc{}                 & 16000  &$\!\!\!\pm\!\!\!$& 6000   & 11000 &$\!\!\!\pm\!\!\!$& 4000  & 4700 &$\!\!\!\pm\!\!\!$& 1700    & 310 &$\!\!\!\pm\!\!\!$& 120\\
+    \wlight{}             & 39600  &$\!\!\!\pm\!\!\!$& 3200   & 37200 &$\!\!\!\pm\!\!\!$& 3000  & 2400 &$\!\!\!\pm\!\!\!$& 200     & 86 &$\!\!\!\pm\!\!\!$& 7     \\ 
+    \zjets{}              & 10000  &$\!\!\!\pm\!\!\!$& 4000   & 6800 &$\!\!\!\pm\!\!\!$& 3000   & 2500 &$\!\!\!\pm\!\!\!$& 1200    & 1000 &$\!\!\!\pm\!\!\!$& 500\\
+    Diboson               & 5100   &$\!\!\!\pm\!\!\!$& 2300   & 3900 &$\!\!\!\pm\!\!\!$& 1700   & 1000 &$\!\!\!\pm\!\!\!$& 400     & 220 &$\!\!\!\pm\!\!\!$& 100   \\ 
+    Multijet              & 12000  &$\!\!\!\pm\!\!\!$& 4000   & 8400 &$\!\!\!\pm\!\!\!$& 3100   & 3100 &$\!\!\!\pm\!\!\!$& 1300    & 640 &$\!\!\!\pm\!\!\!$& 340 \\
+    \midrule                                                                                                                                            
+    Total background      & 130800 &$\!\!\!\pm\!\!\!$& 2800   & 90000 &$\!\!\!\pm\!\!\!$& 900   & 31300 &$\!\!\!\pm\!\!\!$& 1600   & 9600 &$\!\!\!\pm\!\!\!$& 700  \\
+    \midrule                                                                                                                                                
+    Total expected        & 284000 &$\!\!\!\pm\!\!\!$& 600    & 103900 &$\!\!\!\pm\!\!\!$& 400  & 94270 &$\!\!\!\pm\!\!\!$& 320    & 85780 &$\!\!\!\pm\!\!\!$& 290 \\
+    \midrule                                                                                                                                                      
+    Observed              & \multicolumn{3}{c}{283979}        & \multicolumn{3}{c}{103930}      & \multicolumn{3}{c}{94235}        & \multicolumn{3}{c}{85814}       \\
     \bottomrule
   \end{tabular}
   \caption[Event yields for the \ejets{} samples at $\sqrt{s} = 8 \TeV{}$]{
     Numbers of expected events for the \ttbar{} signal and the various background 
     processes and observed events in data for the \ejets{} dataset
     at $\sqrt{s} = 8 \TeV{}$.
-    The uncertainties include statistical and systematic components.}
+    The calibrated yields and uncertainties are shown.}
   \label{tab:yields2012ele}
 \end{table}
