--- a/bib/selection.bib
+++ b/bib/selection.bib
@@ -203,3 +203,21 @@
       reportNumber   = "CERN-PH-EP-2014-153",
       SLACcitation   = "%%CITATION = ARXIV:1407.5063;%%",
 }
+
+@article{Aad:2014zka,
+      author         = "Aad, Georges and others",
+      title          = "{Measurements of normalized differential cross-sections
+                        for ttbar production in pp collisions at sqrt(s) = 7 TeV
+                        using the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Rev.",
+      volume         = "D90",
+      pages          = "072004",
+      doi            = "10.1103/PhysRevD.90.072004",
+      year           = "2014",
+      eprint         = "1407.0371",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-099",
+      SLACcitation   = "%%CITATION = ARXIV:1407.0371;%%",
+}
